--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramen Rating App</title>
+    <title>Rate Ramen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ramen Rating App</h1>
+    <nav class="navbar">
+    <h1>Rate Ramen Here</h1>
+    </nav>
     <div id="ramen-menu"></div>
     
     <div id="ramen-detail">
